--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,6 +555,8 @@ section {
 
 .section-title p {
   margin-bottom: 0;
+  text-align: justify;
+  font-size: 15px;
 }
 
 
@@ -1162,7 +1164,7 @@ section {
 
 .section-services .single-service {
     position: relative;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     background-color: #fff;
     border-radius: 10px;
     padding: 40px 30px;
