--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,8 @@ a:hover {
 
 #header.header-scrolled,
 #header.header-inner-pages {
-  background: #0B1C33;
+  /* background: #0B1C33; */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 #header .logo {
@@ -341,8 +342,9 @@ a:hover {
   /* background: #37517e; */
   /* background: linear-gradient(to right bottom, #00c4cc, #000000); */
   /* background: linear-gradient(to right bottom, #03A9F4, #000000); */
-  background: url(../img/pattern-05.svg), linear-gradient(91.83deg, #0B1C33, #0B1C33);
+  /* background: url(../img/pattern-05.svg), linear-gradient(91.83deg, #0B1C33, #0B1C33); */
   /* background: url(../img/pattern-05.svg) top / 200% repeat, linear-gradient(91.83deg, #0B1C33, #0B1C33); */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 
 }
 
@@ -958,7 +960,8 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: #0B1C33;
+  /* background: #0B1C33; */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 #footer .footer-newsletter {
@@ -1016,7 +1019,8 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #0B1C33;
+  /* background: #0B1C33; */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 #footer .footer-top .footer-contact {
@@ -1891,12 +1895,13 @@ section {
   /* background: #0c0e110d; */
   /* content: ""; */
     /* pointer-events: none; */
-    background: url(../img/pattern-05.svg) top / 200% repeat, linear-gradient(91.83deg, #0B1C33, #293F5F);
-    background-repeat: no-repeat;
+    /* background: url(../img/pattern-05.svg) top / 200% repeat, linear-gradient(91.83deg, #0B1C33, #293F5F); */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
   /* background-attachment: fixed; */
-  background-size: cover;
     /* position: absolute; */
     /* inset:0; */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 
@@ -2471,12 +2476,13 @@ input[type="checkbox"]{
   /* background: #0c0e110d; */
   /* content: ""; */
   /* pointer-events: none; */
-  background: url(../img/pattern-05.svg) top / 200% repeat, linear-gradient(91.83deg, #0B1C33, #293F5F);
-  background-repeat: no-repeat;
+  /* background: url(../img/pattern-05.svg) top / 200% repeat, linear-gradient(91.83deg, #0B1C33, #293F5F); */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
   /* background-attachment: fixed; */
-  background-size: cover;
   /* position: absolute; */
   /* inset: 0; */
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 
