--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -891,12 +891,13 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #47b2e4;
+  /* background: #47b2e4; */
   border: 0;
   padding: 12px 34px;
   color: #fff;
   transition: 0.4s;
   border-radius: 50px;
+  background: linear-gradient(279.3deg, #0037b6 30.98%, #001b79 70.6%)
 }
 
 .contact .php-email-form button[type=submit]:hover {
